<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:text="@string/registro_medicos"
        android:textColor="@android:color/holo_green_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dni"
        android:layout_marginTop="30dp"
        android:layout_marginStart="80dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/titulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.235"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dni"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@id/lblDNI"
        app:layout_constraintTop_toBottomOf="@id/lblDNI" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- ///////////////////////////////////////////////////////////// -->

    <TextView
        android:id="@+id/lblNombreApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_y_apellidos"
        android:layout_marginTop="30dp"
        android:layout_marginStart="80dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/dni"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.35"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombreApell"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@id/lblNombreApellidos"
        app:layout_constraintTop_toBottomOf="@id/lblNombreApellidos" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNombreApell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- ///////////////////////////////////////////////////////////// -->

    <TextView
        android:id="@+id/lblAnnoTitulacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anno_titulacion"
        android:layout_marginTop="30dp"
        android:layout_marginStart="80dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/nombreApell"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.33"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/annoTitulacion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@id/lblAnnoTitulacion"
        app:layout_constraintTop_toBottomOf="@id/lblAnnoTitulacion" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAnnoTitulacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- ///////////////////////////////////////////////////////////// -->

    <TextView
        android:id="@+id/lblCodigoEspecialidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codigo_especialidad"
        android:layout_marginTop="30dp"
        android:layout_marginStart="80dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/annoTitulacion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.4"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codigoEspecialidad"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@id/lblCodigoEspecialidad"
        app:layout_constraintTop_toBottomOf="@id/lblCodigoEspecialidad" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCodigoEspecialidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAyudaEspecialidad"
        android:layout_width="55dp"
        android:layout_height="60dp"
        app:icon="@drawable/ic_help"
        app:layout_constraintStart_toEndOf="@id/codigoEspecialidad"
        app:layout_constraintTop_toTopOf="@id/codigoEspecialidad" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelarSolicitud"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:text="@string/cancelar"
        app:layout_constraintStart_toStartOf="@id/codigoEspecialidad"
        app:layout_constraintTop_toBottomOf="@id/codigoEspecialidad"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistrarSolicitud"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/aceptar"
        app:layout_constraintStart_toEndOf="@id/btnCancelarSolicitud"
        app:layout_constraintTop_toTopOf="@id/btnCancelarSolicitud" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinalizar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:text="Finalizar"
        app:layout_constraintStart_toStartOf="@id/btnCancelarSolicitud"
        app:layout_constraintTop_toBottomOf="@id/btnCancelarSolicitud" />

</androidx.constraintlayout.widget.ConstraintLayout>